--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ sudo: required
 
 language: python
 python:
-  pip install -r requirements.txt
+  - pip install .
+  - pip install -r requirements.txt
 
 addons:
   sonarcloud:
