Fix launch sonarcloud on travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ python: "3.5"
 install:
   pip install -r requirements.txt
 
+jdk:
+  - oraclejdk8
+
 addons:
   sonarcloud:
     organization: "laujorpan"
@@ -16,8 +19,6 @@ addons:
     branches:
       - develop
       - master
-    language:
-      - python
 
 script:
   sonar-scanner
