--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,5 +11,11 @@ sonar.sources=.
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
+#Branch
 sonar.branch=develop
+#Language
 sonar.language=py
+
+#sSonar host
+sonar.host.url=https://sonarcloud.io
+sonar.login=fc2941c5d795ecf55fe89dff1980221be7fa79b2
