Organization was wrong
It was github org and not sonarcloud org

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 
 addons:
   sonarcloud:
-    organization: "laujorpan"
+    organization: "laujorpan-github"
     token:
       secure: "fc2941c5d795ecf55fe89dff1980221be7fa79b2"
     github_token:
